[package]
name = "yubikey"
version = "0.8.0"
description = """
Pure Rust cross-platform host-side driver for YubiKey devices from Yubico with
support for hardware-backed public-key decryption and digital signatures using
the Personal Identity Verification (PIV) application. Supports RSA (1024/2048/3072/4096)
or ECC (NIST P-256/P-384) algorithms e.g, PKCS#1v1.5, ECDSA
"""
authors = ["Tony Arcieri <tony@iqlusion.io>", "Yubico AB"]
license = "BSD-2-Clause"
repository = "https://github.com/iqlusioninc/yubikey.rs"
readme = "README.md"
categories = ["api-bindings", "authentication", "cryptography", "hardware-support"]
keywords = ["ecdsa", "encryption", "rsa", "piv", "signature"]
edition = "2021"
rust-version = "1.85"

[workspace]
members = [".", "cli"]

[workspace.dependencies]
sha2 = "0.11.0-rc.0"
x509-cert = { version = "0.3.0-rc.0", features = [ "builder", "hazmat" ] }

[dependencies]
bitflags = "2.9.1"
der = "0.8.0-rc.6"
des = "0.9.0-rc.0"
elliptic-curve = "0.14.0-rc.8"
hex = { package = "base16ct", version = "0.2", features = ["alloc"] }
log = "0.4.27"
nom = "7.1.3"
ecdsa = { version = "0.17.0-rc.4", features = ["digest", "pem"] }
p256 = "=0.14.0-pre.8"
p384 = "=0.14.0-pre.8"
pbkdf2 = { version = "0.13.0-rc.0", default-features = false, features = ["hmac"] }
pcsc = "2.9.0"
rand = "0.9"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rsa = { version = "0.10.0-rc.1", features = ["sha2"] }
secrecy = "0.10.3"
sha1 = { version = "0.11.0-rc.0", features = ["oid"] }
sha2 = { workspace = true, features = ["oid"] }
signature = "3.0.0-rc.1"
subtle = "2.6.1"
uuid = { version = "1.17.0", features = ["v4"] }
x509-cert.workspace = true
zeroize = "1.8.1"

[dev-dependencies]
env_logger = "0.11"
once_cell = "1"

[features]
untested = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
primefield     = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256           = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384           = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

der            = { git = "https://github.com/RustCrypto/formats.git" }
pkcs1          = { git = "https://github.com/RustCrypto/formats.git" }
x509-cert      = { git = "https://github.com/RustCrypto/formats.git" }

sha1             = { git = "https://github.com/RustCrypto/hashes.git" }
sha2             = { git = "https://github.com/RustCrypto/hashes.git" }

pbkdf2          = { git = "https://github.com/RustCrypto/password-hashes.git" }

rsa             = { git = "https://github.com/RustCrypto/RSA.git" }

ecdsa          = { git = "https://github.com/RustCrypto/signatures.git" }

crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }

elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
