[package]
name = "yubikey"
version = "0.8.0"
description = """
Pure Rust cross-platform host-side driver for YubiKey devices from Yubico with
support for hardware-backed public-key decryption and digital signatures using
the Personal Identity Verification (PIV) application. Supports RSA (1024/2048/3072/4096)
or ECC (NIST P-256/P-384) algorithms e.g, PKCS#1v1.5, ECDSA
"""
authors = ["Tony Arcieri <tony@iqlusion.io>", "Yubico AB"]
license = "BSD-2-Clause"
repository = "https://github.com/iqlusioninc/yubikey.rs"
readme = "README.md"
categories = ["api-bindings", "authentication", "cryptography", "hardware-support"]
keywords = ["ecdsa", "encryption", "rsa", "piv", "signature"]
edition = "2021"
rust-version = "1.81"

[workspace]
members = [".", "cli"]

[workspace.dependencies]
sha2 = "=0.11.0-rc.0"
x509-cert = { version = "=0.3.0-rc.1", features = [ "builder", "hazmat" ] }

[dependencies]
aes = { version = "=0.9.0-pre.3", features = ["zeroize"] }
bitflags = "2.5.0"
cipher = { version = "=0.5.0-pre.8", features = ["rand_core"] }
der = "=0.8.0-rc.7"
des = "=0.9.0-pre.3"
elliptic-curve = "=0.14.0-rc.10"
hex = { package = "base16ct", version = "0.2", features = ["alloc"] }
log = "0.4"
nom = "7"
num-bigint-dig = { version = "0.8", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
ecdsa = { version = "=0.17.0-rc.5", features = ["digest", "pem"] }
p256 = "=0.14.0-pre.9"
p384 = "=0.14.0-pre.9"
pbkdf2 = { version = "=0.13.0-rc.0", default-features = false, features = ["hmac"] }
pcsc = "2.3.1"
rand = "0.9"
rand_core = { version = "0.9", features = ["os_rng"] }
rsa = { version = "=0.10.0-rc.3", features = ["sha2"] }
secrecy = "0.8"
sha1 = { version = "=0.11.0-rc.0", features = ["oid"] }
sha2 = { version = "0.11.0-rc.0", workspace = true, features = ["oid"] }
signature = "=3.0.0-rc.2"
subtle = "2"
uuid = { version = "1.2", features = ["v4"] }
x509-cert.workspace = true
zeroize = "1"

[dev-dependencies]
env_logger = "0.11"
once_cell = "1"

[features]
untested = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }

p256            = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384            = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
primefield = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

der           = { git = "https://github.com/RustCrypto/formats.git" }
der_derive    = { git = "https://github.com/RustCrypto/formats.git" }
pkcs1         = { git = "https://github.com/RustCrypto/formats.git" }
pkcs8         = { git = "https://github.com/RustCrypto/formats.git" }
sec1          = { git = "https://github.com/RustCrypto/formats.git" }
spki          = { git = "https://github.com/RustCrypto/formats.git" }
x509-cert     = { git = "https://github.com/RustCrypto/formats.git" }

sha2          = { git = "https://github.com/RustCrypto/hashes.git" }

rsa           = { git = "https://github.com/RustCrypto/RSA.git" }

ecdsa         = { git = "https://github.com/carl-wallace/signatures.git", branch = "aes_mgmt" }

crypto-common = { git = "https://github.com/RustCrypto/traits.git" }
digest        = { git = "https://github.com/RustCrypto/traits.git" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
signature     = { git = "https://github.com/RustCrypto/traits.git" }

